--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [main] # 确保你的主分支名是 main
+    branches: [main]
 
 permissions:
   contents: read
@@ -15,15 +15,24 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: 'pnpm' # 关键点：这里改为 pnpm
+
       - name: Install dependencies
-        run: npm install
+        run: pnpm install # 关键点：这里改为 pnpm
+
       - name: Build
-        run: npm run build
+        run: pnpm run build # 关键点：这里改为 pnpm
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
