--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: 'pnpm' # 关键点：这里改为 pnpm
+          # cache: 'pnpm' # 关键点：这里改为 pnpm
 
       - name: Install dependencies
         run: pnpm install # 关键点：这里改为 pnpm
