--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,24 +15,24 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+      
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 9
-          run_install: false
-
+      
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 22
-
+          cache: 'pnpm'  # 启用缓存加速构建
+      
       - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
-
+        run: pnpm install --frozen-lockfile  # 使用 frozen-lockfile 更安全
+      
       - name: Build
         run: pnpm run build
-
+      
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -43,6 +43,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
